@@ -1,3 +1,8 @@
+2006-03-25  Alexander Olk  <alex.olk@googlemail.com>
+
+	* ThemeWin32Classic.cs:	First small part of the "de-uglify
+	  ThemeWin32Classic" effort, SizeGrip
+
 2006-03-24  Jackson Harper  <jackson@ximian.com>
 
 	* XplatUIX11.cs: Give a max idle time of one second, this matches
